[package]
name = "cex-v1"
version = "0.1.0"
edition = "2024"

[dependencies]
dotenvy = "0.15.7"
redis = { version = "0.32.5", features = ["aio", "connection-manager", "tokio-comp"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread", "signal"] }
